# NekoEvent

./: CMakeLists.txt  readme.md
include/neko/event/: event.hpp
include/neko/schema/: types.hpp
tests/: event_test.cpp
